Update workflow directories

--- a/.github/workflows/writeapaper.yml
+++ b/.github/workflows/writeapaper.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       # Edit here with the names of your latex file and directory (can use ".")
-      DIR: draft
-      FILE: draft
+      DIR: src
+      FILE: cv
     steps:
       - name: Checkout
         uses: actions/checkout@v4
