Remove bibtex command

--- a/.github/workflows/writeapaper.yml
+++ b/.github/workflows/writeapaper.yml
@@ -27,7 +27,7 @@ jobs:
           run: |
               cd ${{ env.DIR }}
               lualatex ${{ env.FILE }}
-              bibtex ${{ env.FILE }}
+              # bibtex ${{ env.FILE }}
               lualatex ${{ env.FILE }}
               lualatex ${{ env.FILE }}
       - name: move
